[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/levels/base.gd" type="Script" id=1]
[ext_resource path="res://src/prefabs/base_plateforme.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/prefabs/traps/lazer_base.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/imgs/traps/switch.png" type="Texture" id=4]

[node name="base" type="Node2D"]
script = ExtResource( 1 )
nbr_width = 54

[node name="base_plateforme" parent="." instance=ExtResource( 2 )]

[node name="back_tile" parent="base_plateforme" index="0"]
visible = true
tile_data = PoolIntArray(  )

[node name="collision" parent="base_plateforme" index="1"]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 65536, 0, 0, 65589, 0, 0, 131072, 0, 0, 131125, 0, 0, 196608, 0, 0, 196661, 0, 0, 262144, 0, 0, 262197, 0, 0, 327680, 0, 0, 327733, 0, 0, 393216, 0, 0, 393269, 0, 0, 458752, 0, 0, 458805, 0, 0, 524288, 0, 0, 524341, 0, 0, 589824, 0, 0, 589877, 0, 0, 655360, 0, 0, 655413, 0, 0, 720896, 0, 0, 720949, 0, 0, 786432, 0, 0, 786485, 0, 0, 851968, 0, 0, 852021, 0, 0, 917504, 0, 0, 917507, 0, 0, 917508, 0, 0, 917557, 0, 0, 983040, 0, 0, 983043, 0, 0, 983044, 0, 0, 983093, 0, 0, 1048576, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048629, 0, 0, 1114112, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114165, 0, 0, 1179648, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179686, 0, 0, 1179687, 0, 0, 1179688, 0, 0, 1179701, 0, 0, 1245184, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245237, 0, 0, 1310720, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310773, 0, 0, 1376256, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376309, 0, 0, 1441792, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441830, 0, 0, 1441831, 0, 0, 1441832, 0, 0, 1441845, 0, 0, 1507328, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507366, 0, 0, 1507367, 0, 0, 1507368, 0, 0, 1507381, 0, 0, 1572864, 0, 0, 1572870, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572917, 0, 0, 1638400, 0, 0, 1638406, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638438, 0, 0, 1638439, 0, 0, 1638440, 0, 0, 1638453, 0, 0, 1703936, 0, 0, 1703947, 0, 0, 1703948, 0, 0, 1703949, 0, 0, 1703950, 0, 0, 1703951, 0, 0, 1703952, 0, 0, 1703953, 0, 0, 1703954, 0, 0, 1703974, 0, 0, 1703975, 0, 0, 1703976, 0, 0, 1703989, 0, 0, 1769472, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769525, 0, 0, 1835008, 0, 0, 1835046, 0, 0, 1835047, 0, 0, 1835048, 0, 0, 1835061, 0, 0, 1900544, 0, 0, 1900545, 0, 0, 1900546, 0, 0, 1900547, 0, 0, 1900548, 0, 0, 1900549, 0, 0, 1900550, 0, 0, 1900551, 0, 0, 1900552, 0, 0, 1900553, 0, 0, 1900554, 0, 0, 1900555, 0, 0, 1900556, 0, 0, 1900557, 0, 0, 1900558, 0, 0, 1900559, 0, 0, 1900560, 0, 0, 1900561, 0, 0, 1900582, 0, 0, 1900583, 0, 0, 1900584, 0, 0, 1900585, 0, 0, 1900586, 0, 0, 1900587, 0, 0, 1900588, 0, 0, 1900589, 0, 0, 1900590, 0, 0, 1900591, 0, 0, 1900592, 0, 0, 1900593, 0, 0, 1900594, 0, 0, 1900595, 0, 0, 1900596, 0, 0, 1900597, 0, 0, 1966080, 0, 0, 1966081, 0, 0, 1966082, 0, 0, 1966083, 0, 0, 1966084, 0, 0, 1966085, 0, 0, 1966086, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 0, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 0, 0, 1966096, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1966100, 0, 0, 1966101, 0, 0, 1966102, 0, 0, 1966103, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 0, 0, 1966110, 0, 0, 1966111, 0, 0, 1966112, 0, 0, 1966113, 0, 0, 1966114, 0, 0, 1966115, 0, 0, 1966116, 0, 0, 1966117, 0, 0, 1966118, 0, 0, 1966119, 0, 0, 1966120, 0, 0, 1966121, 0, 0, 1966122, 0, 0, 1966123, 0, 0, 1966124, 0, 0, 1966125, 0, 0, 1966126, 0, 0, 1966127, 0, 0, 1966128, 0, 0, 1966129, 0, 0, 1966130, 0, 0, 1966131, 0, 0, 1966132, 0, 0, 1966133, 0, 0, 2031616, 0, 0, 2031617, 0, 0, 2031618, 0, 0, 2031619, 0, 0, 2031620, 0, 0, 2031621, 0, 0, 2031622, 0, 0, 2031623, 0, 0, 2031624, 0, 0, 2031625, 0, 0, 2031626, 0, 0, 2031627, 0, 0, 2031628, 0, 0, 2031629, 0, 0, 2031630, 0, 0, 2031631, 0, 0, 2031632, 0, 0, 2031633, 0, 0, 2031634, 0, 0, 2031635, 0, 0, 2031636, 0, 0, 2031637, 0, 0, 2031638, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031654, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031657, 0, 0, 2031658, 0, 0, 2031659, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 2031662, 0, 0, 2031663, 0, 0, 2031664, 0, 0, 2031665, 0, 0, 2031666, 0, 0, 2031667, 0, 0, 2031668, 0, 0, 2031669, 0, 0 )

[node name="pieges" parent="base_plateforme" index="2"]
tile_data = PoolIntArray( 1900562, 0, 0, 1900563, 0, 0, 1900564, 0, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 0, 0, 1900568, 0, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 0, 0, 1900574, 0, 0, 1900575, 0, 0, 1900576, 0, 0, 1900577, 0, 0, 1900578, 0, 0, 1900579, 0, 0, 1900580, 0, 0, 1900581, 0, 0 )

[node name="spawn_player" type="Position2D" parent="."]
position = Vector2( 24, 208 )

[node name="switch" type="Area2D" parent="."]
position = Vector2( 16, 124 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="switch"]
texture = ExtResource( 4 )
hframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="switch"]
polygon = PoolVector2Array( -4, -4, 4, -4, 4, 4, -4, 4 )

[node name="lazer_rotate" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 96 )
revolution = 5
move_time = 4

[node name="lazer_rotate2" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 96 )
rotation = 1.57079
lazer_color = Color( 0, 0.439216, 1, 1 )
revolution = 8
move_time = 4

[node name="lazer_rotate3" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 96 )
rotation = 3.14137
lazer_color = Color( 0.709804, 0, 1, 1 )
revolution = 8
move_time = 4

[node name="lazer_rotate4" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 224 )
rotation = 4.71238
lazer_color = Color( 0.87451, 0.12549, 0.956863, 1 )
lazer_length = 350
move_time = 4
end_point = Vector2( -80, 0 )
on_time = 2
off_time = 1
[connection signal="body_entered" from="switch" to="." method="_on_switch_body_entered"]

[editable path="base_plateforme"]
